[package]
name = "gemuesi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

telegram-bot =  { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "65ad5cf" }
log4rs = "1.2"
log = "0.4"
tokio = {version = "1.27", features = ["fs", "rt-multi-thread", "macros"]}
serde = "1.0"
serde_json = "1.0"
futures = "0.3"

